--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,12 @@ Flask-Bcrypt==1.0.1
 Flask-Cors==4.0.0
 Flask-JWT-Extended==4.6.0
 greenlet==3.0.3
+gunicorn==21.2.0
 itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.5
 mysqlclient==2.2.4
+packaging==23.2
 PyJWT==2.8.0
 SQLAlchemy==2.0.27
 typing_extensions==4.9.0
